# newfan_education

./: .env.example  .gitignore  AI_Field_Ready_Enterprise_LP構成再設計書.md  AI_Field_Ready_Enterprise_カリキュラム詳細設計書.md  AI_Field_Ready_Enterprise_基本設計書.md  README.md  docker-compose.yml  newfan_education.db  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  newfan_education.db  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260526_0001_initial.py
apps/api/src/: main.py
apps/api/src/application/: b2b_services.py  ports.py  services.py
apps/api/src/domain/: models.py
apps/api/src/infrastructure/: auth.py  course_seed.py  db.py  exercise_execution.py  in_memory_repositories.py  notification_worker.py  postgres_b2b.py  settings.py  sql_models.py
apps/api/src/newfan_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/presentation/: dependencies.py  router.py  schemas.py
apps/api/tests/: test_priority_flow.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/e2e/: auth.spec.ts  courses.spec.ts  integration-real-api.spec.ts  lesson-content.spec.ts  major-flow.spec.ts  nav-consolidation.spec.ts
apps/web/lib/: api.ts  auth.ts  curriculumMdx.server.ts  enterpriseCurriculum.ts  lp-analytics.ts  messageLinks.ts  notificationLinks.ts
content/curriculum/genai-foundations/: 01-what-is-genai.mdx  (+5 more)
docs/: course-catalog-ux-design.md
(+143 files in other folders)
